# stock_ana

./: .editorconfig  .env.example  .gitignore  README.md  backtest.py  backtest_triangle.py  backtest_vcp.py  cron_daily_scan_notify.sh  cron_daily_update.sh  cron_weekly_sector_notify.sh  cron_weekly_vegas_short_notify.sh  daily_scan_notify.ps1  daily_update.py  full_refresh_pipeline.py  gen_key.bat  notify_daily_scan_result.py  notify_smc_ob.py  notify_top_escape.py  notify_weekly_sector_report.py  pyproject.toml  run_pipeline.py  sync_futu_watchlist.py  sync_holding.py  sync_holdings.py  sync_watchlist.py  vegas_mid_daily_scan.py  w_vegas_short_scan.py  watchlist_vegas_scan.py  weekly_sector_notify.ps1  weekly_vegas_short_notify.ps1  weekly_vegas_short_notify.py
data/: ana_prompt.txt  cn_industry_map.csv  hk_full_list.csv  hk_industry_map.csv  hk_list.txt  scan_signal_prompt.md  sector_valuation_members.parquet  sector_valuation_summary.csv  stock_list.md  taxonomy.yaml  taxonomy_v2.yaml  us_sec_profiles.csv
docs/: LLM配置说明.md  daily_holding_top_workflow.md  daily_scan_flow.md  relative_strength_system.md  research_code_inventory.md  rhino_finance_daily_setup.md  smc_ob_scoring_design.md  squeeze_momentum_lazybear.md  top_reversal_current_system.md  top_reversal_escape_signal.md  top_reversal_strategy_architecture.md  vegas_long_pullback_strategy.md  vegas_pullback_ml.md  wave_structure_fix_2026-07.md  weekly_sector_report_flow.md
scripts/: _backtest_shared.py  _check_backtest.py  _check_smc_state.py  _deep_ob_analysis.py  _remove_healthcare.py  _verify_list.py  (+31 more)
(+239 files in other folders)
